Fix vertical text align on ListGroup

--- a/src/components/ListGroup.module.scss
+++ b/src/components/ListGroup.module.scss
@@ -1,7 +1,8 @@
 @import "../styles/dimens";
 
 .groupName {
-  padding-right: 10px;
+  padding-right: 20px;
+  vertical-align: top;
 }
 
 @media (max-width: $breakpoint-width) {
